# altv-cpp-example-resource

./: CMakeLists.txt  README.md  build.bat  resource.cfg
src/: main.cpp  main.h  server.cpp  server.h
src/entities/: Player.cpp  Player.h
